MODORDERS-974. Add more test coverage